# sample-django-boilerplate

./: .gitignore  manage.py  pyproject.toml
my_realtor_site/: admin.py  apps.py  views.py
my_realtor_site/static/css/: index.css
my_realtor_site/static/js/: main.js
my_realtor_site/templates/: base.html  index.html
realtor_site_fundamentals/: asgi.py  settings.py  urls.py  wsgi.py
